Fixes #250. Hide tabs when focusing any text field on mobiles.

--- a/src/sass/utils.scss
+++ b/src/sass/utils.scss
@@ -48,8 +48,3 @@
 .no-pointer {
   cursor: auto;
 }
-
-// From Bootstrap 4
-.p-t-0 {
-  padding-top: 0 !important;
-}
